fixed mobile opening in a 'subscreen' with lots of white space around it

--- a/home_pages/static/css/custom_css.css
+++ b/home_pages/static/css/custom_css.css
@@ -143,7 +143,7 @@ img:hover{
 }
 
 .w-55 {
-  width: 55% !important;
+  width: 55%;
 }
 
 .w-22{
@@ -153,4 +153,17 @@ img:hover{
 .sub-body{
 	padding-left: 3rem;
 	padding-right: 3rem;
+}
+
+ul{
+	margin: 2px;
+}
+
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
